compiler/tests/sct-checker/success/spill.jazz
#[sct = "public × secret → public"]
fn spill1(
    reg u64 pub,
    reg u64 sec
) ->
    reg u64
{
    () = #spill(pub, sec);
    () = #unspill(pub, sec);
    [pub] = sec;
    return pub;
}


#[sct = "public × secret → public"]
fn spill2(
    reg u64 pub,
    reg u64 sec
) ->
    reg u64
{
    #[spill_to_mmx] reg u64 pub1;
    reg u64 msf;
    pub1 = pub;
    msf = #init_msf();
    () = #spill(pub, pub1, sec);
    [pub] = sec;
    () = #unspill(pub, pub1, sec);
    [pub1] = sec;
    pub = #protect(pub, msf);
    [pub] = sec;
    return pub;
}
